Fix card type and spacing; set new featured post

--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -17,13 +17,13 @@ h2,
 h3,
 h4,
 h5 {
-  margin: 3rem 0 1.38rem;
+  font-family: 'AvenirLTPro-Medium', system-ui, sans-serif;
+  margin: 0 0 1.38rem;
   line-height: 1.3;
 }
 
 h1,
 .h1 {
-  margin-top: 0;
   font-size: var(--heading-one);
 }
 
@@ -55,8 +55,7 @@ small,
 .see-more__item {
   text-decoration: none;
   color: var(--darkgray);
-  font-family: AvenirLTPro-Heavy;
-  font-size: 1.1rem;
+  font-family: 'AvenirLTPro-Heavy', system-ui, sans-serif;
   opacity: 1;
   transition: opacity 0.2s ease-in-out;
 
